<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenFragment">



    <Button
        android:id="@+id/button_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_settings"
        app:backgroundTint="#2795d9"
        android:theme="@style/CardView.Dark"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/text_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:gravity="bottom|end"
        android:text="@string/text_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_clock" />

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="80dp"
        android:inputType="numberDecimal |numberSigned"
        android:hint="@string/edit_amount_hint"
        app:layout_constraintEnd_toEndOf="@+id/text_amount"
        app:layout_constraintStart_toStartOf="@+id/text_amount"
        app:layout_constraintTop_toBottomOf="@+id/text_amount" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_payments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/switch_payments"
        app:layout_constraintEnd_toStartOf="@+id/spinner_payments"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_amount" />

    <Spinner
        android:id="@+id/spinner_payments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_payments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switch_payments"
        app:layout_constraintTop_toTopOf="@+id/switch_payments" />

    <TextView
        android:id="@+id/text_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="bottom|end"
        android:text="@string/text_currency"
        app:layout_constraintStart_toStartOf="@+id/switch_payments"
        app:layout_constraintTop_toBottomOf="@+id/switch_payments" />

    <RadioGroup
        android:id="@+id/radio_group_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/text_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_currency"
        app:layout_constraintTop_toTopOf="@+id/text_currency">

        <RadioButton
            android:id="@+id/radio_currency_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_currency_usd" />

        <RadioButton
            android:id="@+id/radio_currency_ils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_currency_ils" />


    </RadioGroup>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Signature: "
        app:layout_constraintStart_toStartOf="@+id/text_currency"
        app:layout_constraintTop_toBottomOf="@+id/text_currency" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_exit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_exit"
        app:layout_constraintBottom_toBottomOf="@+id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_submit"
        app:layout_constraintTop_toTopOf="@+id/button_submit" />


</androidx.constraintlayout.widget.ConstraintLayout>